pequenas correcoes no texto

--- a/Content/synthetic_gravity_data/synthetic_grav_data_fatiando.ipynb
+++ b/Content/synthetic_gravity_data/synthetic_grav_data_fatiando.ipynb
@@ -130,7 +130,7 @@
    },
    "outputs": [],
    "source": [
-    "#change this cell from `Code` to `Raw NBConvert` if you want to load a model\n",
+    "#change this cell from `Raw NBConvert` to `Code` if you want to load a model\n",
     "#by using the Python pickle module (https://docs.python.org/2/library/pickle.html)\n",
     "with open('model.pickle') as f:\n",
     "        model = pickle.load(f)"
