reorganize the vector-vector product classes

--- a/Content/outer.ipynb
+++ b/Content/outer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Other products"
+    "# Outer product"
    ]
   },
   {
@@ -25,7 +25,7 @@
     "\\vdots \\\\\n",
     "x_{N}\n",
     "\\end{array}\n",
-    "\\right]_{N \\times 1}$$"
+    "\\right]_{\\, N \\times 1}$$"
    ]
   },
   {
@@ -44,90 +44,9 @@
     "y_{1} \\\\\n",
     "y_{2} \\\\\n",
     "\\vdots \\\\\n",
-    "y_{N}\n",
+    "y_{M}\n",
     "\\end{array}\n",
-    "\\right]_{N \\times 1} \\: .$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### [Hadamard](https://en.wikipedia.org/wiki/Matrix_multiplication#Hadamard_product) (or entrywise) product"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\begin{split}\n",
-    "\\mathbf{z} \n",
-    "& = \\mathbf{x} \\circ \\mathbf{y} \\\\\n",
-    "& = \\left[\n",
-    "\\begin{array}{c}\n",
-    "x_{1} \\, y_{1} \\\\\n",
-    "x_{2} \\, y_{2}\\\\\n",
-    "\\vdots \\\\\n",
-    "x_{N} \\, y_{N}\n",
-    "\\end{array}\n",
-    "\\right]_{N \\times 1}\n",
-    "\\end{split} \\: .$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Notice that the result is a vector with the same number of elements as $\\mathbf{x}$ and $\\mathbf{y}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "This product can be represented by"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    for i = 1:N\n",
-    "        z[i] = x[i]*y[i]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Or, by using the *colon* notation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    z[:] = x[:]*y[:]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Show that these two approaches are equivalent. To do this, follow the steps below:\n",
-    "\n",
-    "1. Create a function according to the first approach and save it in an external file\n",
-    "2. Create a function according to the second approach and save it in an external file\n",
-    "3. Use the `code-template.ipynb` for comparing the results produced by the two functions"
+    "\\right]_{\\, M \\times 1} \\: .$$"
    ]
   },
   {
@@ -282,9 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -316,7 +233,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -326,9 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -355,9 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -398,7 +311,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -417,7 +330,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -427,9 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -451,9 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -507,7 +416,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -521,9 +430,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
