--- a/Content/dot.ipynb
+++ b/Content/dot.ipynb
@@ -25,7 +25,7 @@
     "\\vdots \\\\\n",
     "x_{N}\n",
     "\\end{array}\n",
-    "\\right]_{N \\times 1}$$"
+    "\\right]_{\\, N \\times 1}$$"
    ]
   },
   {
@@ -46,7 +46,7 @@
     "\\vdots \\\\\n",
     "y_{N}\n",
     "\\end{array}\n",
-    "\\right]_{N \\times 1}$$ ."
+    "\\right]_{\\, N \\times 1}$$ ."
    ]
   },
   {
@@ -86,7 +86,7 @@
    "metadata": {},
    "source": [
     "    c = 0\n",
-    "    for i = 0:N\n",
+    "    for i = 1:N\n",
     "        c = c + x[i]*y[i]"
    ]
   },
@@ -94,277 +94,136 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import the required stuff"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np"
+    "### Exercise"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### My function"
+    "1. Create a function that receives two numpy arrays and computes the dot product. The numpy arrays must have the same size (hint: use an `assert` to verify the input). The function must be written in your `my_functions.py` file, according to the template shown below.\n",
+    "2. Create 3 automatic tests in your `test_my_functions.py` file, according to the template shown below. One of the tests must compare the result obtained by your function and the result obtained by using the function [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html). Another test must set a specific input and compare the result obtained by your function and the expected result. The last test must verify if your function raises an AssertionError, given a specific input."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "def dumb_dot(x, y):\n",
-    "    \n",
-    "    '''\n",
-    "    Calculates the dot product of vectors 'x' and 'y'\n",
-    "    \n",
-    "    input\n",
-    "    \n",
-    "    x: numpy array - vector\n",
-    "    y: numpy array - vector\n",
-    "    \n",
-    "    output\n",
-    "    \n",
-    "    c: float - dot product of 'x' and 'y'\n",
-    "    '''\n",
+    "#### Template for function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    import package_bla as pckbla\n",
+    "    import package_ble as pckble\n",
+    "    import package_bli as pckbli\n",
+    "\n",
+    "\n",
+    "    def my_function():\n",
+    "\n",
+    "        '''\n",
+    "        Description of the function.\n",
+    "\n",
+    "\n",
+    "        input\n",
+    "\n",
+    "        input1: variable type - description of the variable\n",
+    "        input2: variable type - description of the variable    \n",
+    "\n",
+    "\n",
+    "        output\n",
+    "\n",
+    "        output1: variable type - description of the variable\n",
+    "        output2: variable type - description of the variable\n",
+    "\n",
+    "\n",
+    "        '''\n",
+    "\n",
+    "        # create variables\n",
+    "\n",
+    "        # define assert statements\n",
+    "        assert 'statement A' and 'statement B', 'error message 1'\n",
+    "        assert 'statement A' == 'statement B', 'error message 2'\n",
+    "        assert 'statement A' != 'statement B', 'error message 3'\n",
+    "        assert 'statement A' <= 'statement B', 'error message 4'\n",
+    "        assert 'statement A' or 'statement B', 'error message 5'\n",
+    "\n",
+    "        # your code\n",
+    "        a = pckbla.function(...)\n",
+    "        b = pckble.function(...)\n",
+    "        for i in range ...\n",
+    "            c = a*pckbli.function(b)\n",
+    "        ...\n",
+    "\n",
+    "        return output1, output2, ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Template for test functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    import my_functions as mf\n",
+    "    import numpy as np\n",
+    "    from numpy.testing import assert_almost_equal as aae\n",
+    "    from pytest import raises\n",
+    "\n",
+    "\n",
+    "    def test_my_function1():\n",
+    "\n",
+    "        'Function must return a specific result given a specific input'\n",
+    "\n",
+    "        specific_input = ...\n",
+    "        expected_result = ...\n",
+    "        my_result = mf.my_function1(...)\n",
     "        \n",
-    "    assert x.size == y.size, 'x and y need to have the same size'\n",
-    "    \n",
-    "    c = 0.0\n",
-    "    \n",
-    "    for i in range(x.size):\n",
-    "        c += x[i]*y[i]\n",
-    "    \n",
-    "    return c"
+    "        aae(my_result, expected_result, decimal=15)\n",
+    "\n",
+    "\n",
+    "    def test_my_function2():\n",
+    "\n",
+    "        'Function must raise an AssertionError for a specific input'\n",
+    "\n",
+    "        # parameter values\n",
+    "        p1 = ...\n",
+    "        p2 = ...\n",
+    "        p3 = ...\n",
+    "        \n",
+    "        raises(AssertionError, mf.my_function2, parameter1=p1, parameter2=p2, parameter3=p3)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import my functions from an external file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import my_functions as mfun"
+    "#### Notes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Input"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "x = np.array([1,2,3])\n",
-    "y = np.array([1,1,1])\n",
-    "z = np.array([4,5,6,7])"
+    "The test function `test_my_function2` shown above presumes that the function `mf.my_function2` is defined as follows:\n",
+    "\n",
+    "    def my_function2(parameter1, parameter2, parameter3):\n",
+    "        ...\n",
+    "        assert ...\n",
+    "        return ..."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the vectors `x` and `y` have the same number of elements. On the other hand, `z` has a different number of elements."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Results produced by my function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "x and y need to have the same size",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-bb6b97aae15a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdumb_dot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-2-eb6aa86f9c98>\u001b[0m in \u001b[0;36mdumb_dot\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m     14\u001b[0m     '''\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m     \u001b[1;32massert\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'x and y need to have the same size'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: x and y need to have the same size"
-     ]
-    }
-   ],
-   "source": [
-    "dumb_dot(x,z)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is an example of error message raised by the function `dumb_dot` if the vectors do not have the same number of elements."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "my_result = dumb_dot(x,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "my_result2 = mfun.dumb_dot(x,y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Result produced by independent codes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "python_result1 = np.sum(x[:]*y[:])\n",
-    "python_result2 = np.dot(x,y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Testing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.allclose(python_result1, my_result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.allclose(python_result1, my_result2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.allclose(python_result2, my_result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.allclose(python_result2, my_result2)"
+    "Do not use [Tab](https://en.wikipedia.org/wiki/Tab_key) in your code. Replace a Tab by 4 spaces. Use only [ASCII characters](https://en.wikipedia.org/wiki/ASCII#Printable_characters)."
    ]
   }
  ],
@@ -384,9 +243,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
