--- a/Content/scalar-vetor.ipynb
+++ b/Content/scalar-vetor.ipynb
@@ -27,7 +27,7 @@
     "                \\vdots \\\\\n",
     "                a \\, x_{N}\n",
     "                \\end{array}\n",
-    "                \\right]_{N \\times 1}\n",
+    "                \\right]_{\\, N \\times 1}\n",
     "\\end{split}$$"
    ]
   },
@@ -42,8 +42,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for i = 0:N\n",
+    "    for i = 1:N\n",
     "        y[i] = a*x[i]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or, alternatively, by using the *colon notation*,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    y[:] = a*x[:]"
    ]
   },
   {
@@ -61,21 +75,8 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### My function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The cell below shows an example of a function that is defined in the own Jupyter Notebook:"
+    "import numpy as np\n",
+    "import my_functions as mf"
    ]
   },
   {
@@ -86,53 +87,7 @@
    },
    "outputs": [],
    "source": [
-    "def dumb_scalar_vector(a, x):\n",
-    "    \n",
-    "    '''\n",
-    "    Calculates the product of a scalar 'a' and\n",
-    "    a vector 'x'\n",
-    "    \n",
-    "    input\n",
-    "    \n",
-    "    a: float - scalar\n",
-    "    x: numpy array - vector\n",
-    "    \n",
-    "    output\n",
-    "    \n",
-    "    y: float - product of 'a' and 'x'\n",
-    "    '''\n",
-    "\n",
-    "    y = np.zeros_like(x)\n",
-    "    \n",
-    "    for i in range(x.size):\n",
-    "        y[i] = a*x[i]\n",
-    "    \n",
-    "    return y"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Importing my functions from a external file"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The cell below shows the example of a function that can be defined in an external file. The file is called `my_functions.py` and is located at the same directory as this notebook. Compare the content of this file with the previously defined function `scalar_vector`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import my_functions as mfun"
+    "from numpy.testing import assert_almost_equal as aae"
    ]
   },
   {
@@ -144,9 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -158,81 +113,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Result produced by my function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### defined in this notebook"
+    "### Result computed with my function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  4.   8.  12.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "my_result = dumb_scalar_vector(a,x)\n",
-    "\n",
-    "print my_result"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### defined in the external file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  4.   8.  12.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "my_result2 = mfun.dumb_scalar_vector(a,x)\n",
-    "\n",
-    "print my_result2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Result produced by an independent code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "result_numpy = a*x[:]"
+    "my_result = mf.dumb_scalar_vector(a,x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  4.   8.  12.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print my_result"
    ]
   },
   {
@@ -246,47 +155,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.  1.  1.  1.]\n"
+     ]
     }
    ],
    "source": [
-    "np.allclose(result_numpy, my_result)"
+    "# specific input\n",
+    "b = 3.\n",
+    "y = np.ones(4)\n",
+    "\n",
+    "print y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# expected result\n",
+    "expected_result = np.zeros(4) + 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3.  3.  3.  3.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print expected_result"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "# my result\n",
+    "my_result = mf.dumb_scalar_vector(b, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# compare your result with the expected result\n",
+    "aae(my_result, expected_result, decimal=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# compare your result with an alternative Python implementation\n",
+    "aae(my_result, b*y[:], decimal=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# compare your result with an alternative Python implementation\n",
+    "aae(my_result, b*y, decimal=15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Take a look at the file `test_my_functions.py`. At the same directory containing the file `my_functions.py`, run the command `python -m pytest test_my_functions.py`. You will get an output like the following:\n",
+    "\n",
+    "<img src='pytest_output_example.png' width = 800>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Timing the code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "c = 23.\n",
+    "z = np.random.rand(1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000 loops, best of 3: 320 µs per loop\n"
+     ]
     }
    ],
    "source": [
-    "np.allclose(result_numpy, my_result2)"
+    "%timeit -n 10000 mf.dumb_scalar_vector(c, z)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000 loops, best of 3: 2.16 µs per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit -n 10000 c*z[:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000 loops, best of 3: 1.91 µs per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit -n 10000 c*z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -305,9 +356,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
