class about vector-vector products

--- a/Content/hadamard.ipynb
+++ b/Content/hadamard.ipynb
@@ -71,7 +71,7 @@
     "\\vdots \\\\\n",
     "x_{N} \\, y_{N}\n",
     "\\end{array}\n",
-    "\\right]_{N \\times 1}\n",
+    "\\right]_{\\, N \\times 1}\n",
     "\\end{split} \\: .$$"
    ]
   },
@@ -124,8 +124,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Create a function that receives two numpy arrays and computes the Hadamard product. The numpy arrays must have the same size and shape (hint: use an `assert` to verify the input). The function must be written in your `my_functions.py` file, according to the template shown in the notebook `dot.ipynb`.\n",
-    "2. Create at least an automatic test in your `test_my_functions.py` file, according to the template shown in the notebook `dot.ipynb`. One of the tests must compare the result obtained by your function and the result obtained by directly computing `array1*array2`, where `array1` and `array2` are the given numpy arrays. Another test must set a specific input and compare the result obtained by your function and the expected result. The last test must verify if your function raises an AssertionError, given a specific input."
+    "1. Create a function that receives two numpy arrays and computes the Hadamard product by following the first algorithm shown above (with for). The numpy arrays must have the same size and shape (hint: use an `assert` to verify the input). The function must be written in your `my_functions.py` file, according to the template shown in the notebook `dot.ipynb`.\n",
+    "2. Create three automatic tests in your `test_my_functions.py` file, according to the template shown in the notebook `dot.ipynb`. One of the tests must compare the result obtained by your function and the result obtained by the algorithm which uses the *colon* notation. Another test must set a specific input and compare the result obtained by your function and the expected result. The last test must verify if your function raises an AssertionError, given a specific input."
    ]
   },
   {
@@ -155,7 +155,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -169,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
