--- a/Content/outer.ipynb
+++ b/Content/outer.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let $\\mathbf{x}$ and $\\mathbf{y}$ be two $N \\times 1$ vectors given by:"
+    "Let $\\mathbf{x}$ and $\\mathbf{y}$ be two vectors given by:"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Kronecker (or direct, or [outer](https://en.wikipedia.org/wiki/Outer_product)) product"
+    "The Kronecker (or direct, or [outer](https://en.wikipedia.org/wiki/Outer_product)) product is defined as follows:"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that, in this case, the result is a square matrix with order $N$ equal to the number of elements of $\\mathbf{x}$ and $\\mathbf{y}$. However, this operation does not require that the vectors $\\mathbf{x}$ and $\\mathbf{y}$ have the same number of elements. Consider, for example, that $\\mathbf{x}$ is a $N \\times 1$ vector and that $\\mathbf{y}$ is a $M \\times 1$ vector, where $N \\neq M$. In this case, the matrix $\\mathbf{M}$ is $N \\times M$, e.g., it has the number of rows equal to the number of elements of $\\mathbf{x}$ and the number of colunms equal to the number of elements of $\\mathbf{y}$."
+    "Notice that, in this case, the result is a $N \\times M$ matrix, where $N$ is the number of elements of $\\mathbf{x}$ and $M$ is the number of elements of $\\mathbf{y}$."
    ]
   },
   {
@@ -135,37 +135,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Show that these three approaches are equivalent. To do this, follow the steps below:\n",
-    "\n",
-    "1. Create a function according to the first approach and save it in an external file\n",
-    "2. Create a function according to the second approach and save it in an external file\n",
-    "3. Create a function according to the third approach and save it in an external file\n",
-    "4. Use the `code-template.ipynb` for comparing the results produced by these three functions with the code presented below"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "#### Numpy example of the outer product"
+    "### Exercise"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import numpy"
+    "1. Implement the three algoritms shown above for computing the outer product between two numpy arrays. Each algorithm must be in a different function. All functions must receive two numpy arrays and return the outer product. The numpy arrays may have different sizes. The functions must be written in your `my_functions.py` file, according to the template shown in the notebook `dot.ipynb`.\n",
+    "2. Create four automatic tests in your `test_my_functions.py` file, according to the template shown in the notebook `dot.ipynb`. One test must compare the result obtained all your functions and the result obtained by the function [`numpy.outer`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.outer.html) (see the example below). The other three tests must set a specific input and compare the expected result and the result obtained by each of your functions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#### The routine [`numpy.outer`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.outer.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code below uses the routines [`numpy.arange`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html) and [`numpy.linspace`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linspace.html)."
    ]
   },
   {
@@ -180,13 +174,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create a colunm vector using the functions [numpy.arange](http://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html) and [numpy.reshape](http://docs.scipy.org/doc/numpy/reference/generated/numpy.reshape.html)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -194,23 +181,20 @@
    },
    "outputs": [],
    "source": [
-    "x = np.arange(5.)\n",
-    "x = np.reshape(x, (x.size, 1))"
+    "x = np.arange(5.)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.],\n",
-       "       [ 1.],\n",
-       "       [ 2.],\n",
-       "       [ 3.],\n",
-       "       [ 4.]])"
+       "array([ 0.,  1.,  2.,  3.,  4.])"
       ]
      },
      "execution_count": 3,
@@ -223,13 +207,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create a row vector by using the function [numpy.linspace](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linspace.html)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -237,13 +214,15 @@
    },
    "outputs": [],
    "source": [
-    "yT = np.linspace(0.6, 1.2, 3)"
+    "y = np.linspace(0.6, 1.2, 3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -257,7 +236,7 @@
     }
    ],
    "source": [
-    "yT"
+    "y"
    ]
   },
   {
@@ -270,7 +249,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -288,135 +269,14 @@
     }
    ],
    "source": [
-    "x*yT"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "### Exercise 4"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let $\\mathbf{a}^{\\top}$ be an ${1 \\times 5}$ vector and $\\mathbf{b}^{\\top}$ be an ${1 \\times 3}$ vector as follows:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "aT = np.arange(5.)\n",
-    "bT = np.linspace(11., 13., 3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's also consider the two matrices $\\mathbf{A}$ and $\\mathbf{B}$, created from $\\mathbf{a}^{\\top}$ and $\\mathbf{b}^{\\top}$ by using the function [numpy.meshgrid](http://docs.scipy.org/doc/numpy/reference/generated/numpy.meshgrid.html):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "A, B = np.meshgrid(aT,bT)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.,  1.,  2.,  3.,  4.],\n",
-       "       [ 0.,  1.,  2.,  3.,  4.],\n",
-       "       [ 0.,  1.,  2.,  3.,  4.]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 11.,  11.,  11.,  11.,  11.],\n",
-       "       [ 12.,  12.,  12.,  12.,  12.],\n",
-       "       [ 13.,  13.,  13.,  13.,  13.]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "B"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Show that $\\mathbf{A} = \\mathbf{1}_{3 \\times 1} \\otimes \\mathbf{a}^{\\top}$ and $\\mathbf{B} = \\mathbf{b} \\otimes \\mathbf{1}_{1 \\times 5}$. Use the `code-template.ipynb` and follow the steps below:\n",
-    "\n",
-    "1. Create the inputs $\\mathbf{a}^{\\top}$, $\\mathbf{b}$, $\\mathbf{1}_{3 \\times 1}$ and $\\mathbf{1}_{1 \\times 5}$\n",
-    "\n",
-    "2. Calculate $\\mathbf{A}$ and $\\mathbf{B}$ by using one of your outer product functions\n",
-    "\n",
-    "3. Calculate $\\mathbf{A}$ and $\\mathbf{B}$ by using the `numpy.meshgrid` function\n",
-    "\n",
-    "4. Compare the results by using the function `numpy.allclose`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### References"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Golub, G. H. and Van Loan, C. F. Matrix computations, 4th edition, Johns Hopkins University Press, 2013\n",
-    "\n",
-    "* Horn, R. A. and Johnson, C. R. Topics in matrix analysis, Cambridge University Press, 1994"
+    "np.outer(x, y)"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -430,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
