--- a/Content/outer.ipynb
+++ b/Content/outer.ipynb
@@ -69,12 +69,12 @@
     "                \\vdots \\\\\n",
     "                x_{N} \\, \\mathbf{y}^{\\top}\n",
     "                \\end{array}\n",
-    "                \\right]_{N \\times N} \\\\\n",
+    "                \\right]_{N \\times M} \\\\\n",
     "           & = \\left[\n",
     "                \\begin{array}{ccc}\n",
     "                y_{1} \\, \\mathbf{x} & \\dots & y_{N} \\, \\mathbf{x}\n",
     "                \\end{array}\n",
-    "                \\right]_{N \\times N}\n",
+    "                \\right]_{N \\times M}\n",
     "\\end{split} \\: .$$"
    ]
   },
@@ -187,9 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -220,9 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -249,9 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -276,7 +270,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -290,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
