matrix-matrix product class

--- a/Content/matrix-matrix.ipynb
+++ b/Content/matrix-matrix.ipynb
@@ -158,7 +158,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    C[:,:] = 0.\n",
     "    for i = 1:N\n",
     "        for j = 1:L\n",
     "            for k = 1:M\n",
@@ -250,7 +249,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    C[:,:] = 0.\n",
     "    for k = 1:M\n",
     "        for j = 1:L\n",
     "            for i = 1:N\n",
@@ -268,7 +266,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    C[:,:] = 0.\n",
     "    for k = 1:M\n",
     "        for j = 1:L\n",
     "            C[:,j] = C[:,j] + A[:,k]*B[k,j]"
@@ -285,7 +282,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    C[:,:] = 0.\n",
     "    for k = 1:M\n",
     "        C[:,:] = C[:,:] + outer(A[:,k],B[k,:])"
    ]
@@ -301,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 8"
+    "### Exercise"
    ]
   },
   {
@@ -310,13 +306,14 @@
    "source": [
     "Show that these five approaches are equivalent. To do this, follow the steps below:\n",
     "\n",
-    "1. Create five functions for implementing these five approaches and save them in an external file\n",
-    "2. Use the `code-template.ipynb` for comparing the results produced by these five functions to the result produced by the python code shown below"
+    "1. In your `my_function.py` file, create 5 functions for implementing the 5 algorithms shown above. All functions must receive 2 matrices and return the resultant matrix.\n",
+    "2. In your `test_my_function.py` file, create 2 tests for each function created in the previous item. One test must compare the result produced by your function and an expected result produced by a specific input. The other test must compare the result produced by your function and the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html) (see the example presented below).\n",
+    "3. *Extra*: use the `%timeit` to compare your functions and the function `numpy.dot`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -327,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -342,18 +339,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "C = A.dot(B)"
+    "C = np.dot(A, B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -383,6 +380,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
