--- a/Content/matrix-vector.ipynb
+++ b/Content/matrix-vector.ipynb
@@ -70,7 +70,6 @@
    "metadata": {},
    "source": [
     "    for i = 1:N\n",
-    "        y[i] = 0\n",
     "        for j = 1:M\n",
     "            y[i] = y[i] + A[i,j]*x[j]"
    ]
@@ -101,7 +100,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    y[:] = 0\n",
     "    for j = 1:M\n",
     "        y[:] = y[:] + A[:,j]*x[j]"
    ]
@@ -128,7 +126,7 @@
    "source": [
     "Show that these three approaches are equivalent. To do this, follow the steps below:\n",
     "\n",
-    "1. In your `my_functions.py` file, create 3 functions. Each function must implement one the algorithms shown above. Follow the template presented in the [`dot.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/dot.ipynb).\n",
+    "1. In your `my_functions.py` file, create 3 functions. Each function must implement one of the 3 algorithms shown above. Follow the template presented in the [`dot.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/dot.ipynb). All functions must return the resultant vector, given a matrix and a vector.\n",
     "2. For each function created in the previous item, create 2 tests in your `test_my_functions.py`. One test must compare the result produced by your function and an expected result produced by a specific input. The other test must compare the result produced by your function and the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html) (see the example shown below). Follow the template presented in the [`dot.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/dot.ipynb).\n",
     "3. *Extra*: use the `%timeit` to compare your functions and the function `numpy.dot`."
    ]
