matrix-matrix product class

--- a/Content/matrix-matrix.ipynb
+++ b/Content/matrix-matrix.ipynb
@@ -315,7 +315,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -351,9 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -377,12 +375,95 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Consider the following rotation matrices:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{R}_{1}(\\theta) = \\left[ \\begin{array}{ccc}\n",
+    "1 & 0 & 0 \\\\\n",
+    "0 & \\cos \\theta & \\sin \\theta \\\\\n",
+    "0 & -\\sin \\theta & \\cos \\theta\n",
+    "\\end{array} \\right] \\: ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{R}_{2}(\\theta) = \\left[ \\begin{array}{ccc}\n",
+    "\\cos \\theta & 0 & -\\sin \\theta \\\\\n",
+    "0 & 1 & 0 \\\\\n",
+    "\\sin \\theta & 0 & \\cos \\theta\n",
+    "\\end{array} \\right]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{R}_{3}(\\theta) = \\left[ \\begin{array}{ccc}\n",
+    "\\cos \\theta & \\sin \\theta & 0 \\\\\n",
+    "-\\sin \\theta & \\cos \\theta & 0 \\\\\n",
+    "0 & 0 & 1\n",
+    "\\end{array} \\right] \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Show that these matrices are orthogonal. To do this, follow the steps below:\n",
+    "\n",
+    "1. In your `my_functions.py` file, create 3 functions. Each function must receive an angle $\\theta$, in degrees, and return one of the rotation matrices shown above.\n",
+    "2. In your `test_my_functions.py`, create 3 tests. Each test must compute the product of 2 rotation matrices and check if the result is equal to the identity matrix. The tests must use your functions for computing the product between matrices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -396,9 +477,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
