matrix-matrix class

--- a/Content/matrix-matrix.ipynb
+++ b/Content/matrix-matrix.ipynb
@@ -447,7 +447,7 @@
     "Show that these matrices are orthogonal. To do this, follow the steps below:\n",
     "\n",
     "1. In your `my_functions.py` file, create 3 functions. Each function must receive an angle $\\theta$, in degrees, and return one of the rotation matrices shown above.\n",
-    "2. In your `test_my_functions.py`, create 3 tests. Each test must compute the product of 2 rotation matrices and check if the result is equal to the identity matrix. The tests must use your functions for computing the product between matrices."
+    "2. In your `test_my_functions.py`, create 3 tests. Each test must verify if a particular rotation matrix is orthogonal. The tests must use your functions for computing the product between matrices."
    ]
   },
   {
