small change in the text of the exercise

--- a/Content/diagonal_matrices.ipynb
+++ b/Content/diagonal_matrices.ipynb
@@ -130,7 +130,7 @@
     "2. In your `test_my_functions.py` file, create two tests for the function created in item 1. One test must receive an specific input and compare the result obtained by your function with an expected result. The other test must create the diagonal matrix `D` and the vector `d` containing its diagonal elements (see the example below). This test must compare the result produced by one of your previous functions for computing the product `DB` and the result produced by the function created in the item 1.\n",
     "3. In your `my_functions.py` file, create a function for computing the product `BD` according to the second algorithm shown above. The function must receive the full matrix `B` and the diagonal `d`.\n",
     "4. In your `test_my_functions.py` file, create two tests for the function created in item 3. One test must receive an specific input and compare the result obtained by your function with an expected result. The other test must create the diagonal matrix `D` and the vector `d` containing its diagonal elements (see the example below). This test must compare the result produced by one of your previous functions for computing the product `BD` and the result produced by the function created in the item 3.\n",
-    "5. Determine the total number of flops associated with each algorithm presented above. These number of flops are the same as those required for computing the conventional product between full matrices?"
+    "5. Determine the total number of flops associated with each algorithm presented above. Are these number of flops equal to those required for computing the conventional product between full matrices?"
    ]
   },
   {
