small change in the text

--- a/Content/flops.ipynb
+++ b/Content/flops.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "**5. Product of an $N \\times M$ matrix $\\mathbf{A}$ and an $M \\times 1$ vector $\\mathbf{x}$**\n",
     "\n",
-    "By using the dot product formulation, it can be easily shown that the total number of flops required for computing the resulting vector is $N \\left( 2M - 1 \\right) \\approx 2NM$ flops. In the notebook ([`matrix-vector.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/matrix-vector.ipynb)), we have learned three different ways of computing the product $\\mathbf{A} \\mathbf{x}$. What is the total number of flops associated with each way?"
+    "By using the dot product formulation, it can be easily shown that the total number of flops required for computing the resulting vector is $N \\left( 2M - 1 \\right) \\approx 2NM$ flops. In the notebook ([`matrix-vector.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/matrix-vector.ipynb)), we have learned three different ways of computing the product $\\mathbf{A} \\mathbf{x}$. What is the total number of flops associated with each one?"
    ]
   },
   {
@@ -120,6 +120,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
