extra exercise about the triple product of full matrices

--- a/Content/flops.ipynb
+++ b/Content/flops.ipynb
@@ -110,6 +110,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Exercise (extra)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $\\mathbf{A}$ be an $N \\times M$ matrix, $\\mathbf{B}$ be an $M \\times L$ matrix, and $\\mathbf{C}$ be an $L \\times P$ matrix. Consider the problem of computing the following matrix:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{E} = \\mathbf{A} \\, \\mathbf{B} \\, \\mathbf{C} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We know that this product can be computed by following two different approaches:\n",
+    "\n",
+    "$$\n",
+    "\\underbrace{\\left( \\mathbf{A} \\, \\mathbf{B}\\right) \\mathbf{C}}_{\\text{approach 1}} = \n",
+    "\\underbrace{\\mathbf{A} \\left( \\mathbf{B} \\, \\mathbf{C} \\right)}_{\\text{approach 2}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case, what is the total number of flops required to compute $\\mathbf{E}$ by following each approach?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
